force-app/main/default/objects/LLC_BI__Product_Package_Parent_Loan_History__c/fields/LLC_BI__Child_Highest__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Child_Highest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Highest</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Child Highest</relationshipLabel>
    <relationshipName>Child_Highest</relationshipName>
    <type>Lookup</type>
</CustomField>