force-app/main/default/objects/LLC_BI__Product_Package_Parent_Loan_History__c/fields/LLC_BI__Child_Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Child_Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Product Package Loans History</relationshipLabel>
    <relationshipName>Product_Package_Loans_History</relationshipName>
    <type>Lookup</type>
</CustomField>