force-app/main/default/objects/LLC_BI__Product_Package_Parent_Loan_History__c/fields/LLC_BI__Is_Booked__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Is Booked</label>
    <type>Checkbox</type>
</CustomField>