force-app/main/default/objects/LLC_BI__Product_Package_Parent_Loan_History__c/fields/LLC_BI__Parent_Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Parent_Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Product Package Loans History (Parent Loan)</relationshipLabel>
    <relationshipName>Product_Package_Loans_History1</relationshipName>
    <type>Lookup</type>
</CustomField>